--- a/HotelSystem/src/main/resources/static/admin/login.html
+++ b/HotelSystem/src/main/resources/static/admin/login.html
@@ -52,10 +52,9 @@
             <div class="form-group">
                 <label>角色</label>
                 <select id="role" required>
+                    <option value="OPERATOR">民宿经营者</option>
                     <option value="RECEPTIONIST">前台</option>
                     <option value="HOUSEKEEPING">房务</option>
-                    <option value="MANAGER">经理</option>
-                    <option value="ADMIN">管理员</option>
                 </select>
             </div>
             <button type="submit" class="btn btn-primary btn-block">登录</button>
@@ -96,7 +95,7 @@
         
         <div style="margin-top:20px; padding:15px; background:#f8f9fa; border-radius:5px; font-size:0.9em; color:#666;">
             <p><strong>测试账号：</strong></p>
-            <p>管理员: admin / admin123</p>
+            <p>民宿经营者: admin / admin123</p>
             <p>（其他角色需要先创建用户）</p>
         </div>
     </div>
