--- a/HotelSystem/src/main/resources/static/admin/reservations.html
+++ b/HotelSystem/src/main/resources/static/admin/reservations.html
@@ -130,13 +130,11 @@
             
             // 根据权限显示/隐藏菜单
             const userRole = auth.getUserRole();
-            if (userRole === 'ADMIN') {
+            if (userRole === 'OPERATOR') {
                 const usersMenuLink = document.getElementById('usersMenuLink');
                 if (usersMenuLink) {
                     usersMenuLink.style.display = 'block';
                 }
-            }
-            if (userRole === 'ADMIN' || userRole === 'MANAGER') {
                 const logsMenuLink = document.getElementById('logsMenuLink');
                 if (logsMenuLink) {
                     logsMenuLink.style.display = 'block';
@@ -250,7 +248,7 @@
             }
 
             // 编辑和删除预订 - 仅经理和管理员可以操作
-            if (permissions.isManagerOrAdmin()) {
+            if (permissions.isOperator()) {
                 if (reservation.status !== 'CHECKED_OUT') {
                     buttons += `<button class="btn btn-secondary" onclick="editReservation(${reservation.id})">编辑</button> `;
                 }
@@ -644,7 +642,7 @@
         }
         
         async function deleteReservation(id) {
-            if (!permissions.checkPermission(['MANAGER', 'ADMIN'], '删除预订')) {
+            if (!permissions.checkPermission(['OPERATOR'], '删除预订')) {
                 return;
             }
             if (!confirm('确定要删除此预订吗？删除后无法恢复！')) return;
@@ -664,7 +662,7 @@
         }
 
         async function checkIn(reservationId) {
-            if (!permissions.checkPermission(['RECEPTIONIST', 'MANAGER', 'ADMIN'], '办理入住')) {
+            if (!permissions.checkPermission(['RECEPTIONIST', 'OPERATOR'], '办理入住')) {
                 return;
             }
             if (!confirm('确认办理入住？')) return;
@@ -684,7 +682,7 @@
         }
 
         async function checkOut(reservationId) {
-            if (!permissions.checkPermission(['RECEPTIONIST', 'MANAGER', 'ADMIN'], '办理退房')) {
+            if (!permissions.checkPermission(['RECEPTIONIST', 'OPERATOR'], '办理退房')) {
                 return;
             }
             if (!confirm('确认办理退房？')) return;
